--- a/Apresentacao/propaganda.html
+++ b/Apresentacao/propaganda.html
@@ -158,7 +158,7 @@
 
         <!-- Introductory Text -->
         <p>
-            Dive into the world of English learning through engaging Biblical stories. Our interactive tools, including StoryCards, Flashcards, Memory Games, and more, are designed to make your learning experience meaningful and enjoyable. Explore each section to enhance your vocabulary, grammar, pronunciation, and conversational skills, all while connecting with timeless Biblical narratives.
+           Dive into the world of English learning through engaging biblical stories. Our interactive tools, including AI Conversation, StoryCards, Flashcards, Games, Grammar, and more, are designed to make your learning experience meaningful and enjoyable. Explore each section to discover how you can improve your vocabulary, grammar, pronunciation, and conversational skills, all while connecting with timeless biblical narratives.
         </p>
 
         <!-- Links to Topics -->
@@ -168,24 +168,26 @@
     <a href="#" class="topic-link" data-popup="memorygame-popup">Memory Game: Enhance Vocabulary Through Play</a>
     <a href="#" class="topic-link" data-popup="wordsearch-popup">Word Search: Fun with Vocabulary Puzzles</a>
     <a href="#" class="topic-link" data-popup="grammar-popup">Grammar: Mastering English in Context</a>
-    <a href="#" class="topic-link" data-popup="quizzes-popup">Quizzes: Perguntas & Respostas Interativas</a>
-    <a href="#" class="topic-link" data-popup="speak-popup">Speak Cards: Pratique a Pronúncia de Forma Interativa</a>
+    <a href="#" class="topic-link" data-popup="quizzes-popup">Quizzes: Interactive Questions & Answers</a>
+    <a href="#" class="topic-link" data-popup="speak-popup">Speak Cards: Practice Pronunciation Interactively</a>
     <a href="#" class="topic-link" data-popup="hannahvideos-popup">HannahVideos: Engaging Learning Through Videos</a>
     <a href="#" class="topic-link" data-popup="lessons-popup">Exploring Biblical Lessons: Matching Game & Life Lessons</a>
-    <a href="#" class="topic-link" data-popup="spelling-tools-popup">Ferramentas de Ortografia: Praticando a Escrita Correta</a>
+    <a href="#" class="topic-link" data-popup="spelling-tools-popup">Spelling Tools: Practicing Accurate Writing</a>
     <a href="#" class="topic-link" data-popup="tests-popup">Tests: Assessing Your Progress</a>
 </div>
     </div>
 
     <!-- Pop-up Modals -->
     
-   <!-- StoryCards Popup -->
+  <!-- Pop-up Modals -->
+
+<!-- StoryCards Popup -->
 <div id="storycards-popup" class="popup">
     <div class="popup-content">
         <span class="close">&times;</span>
         <h2>StoryCards: Learn English with Biblical Stories</h2>
         <p>
-            StoryCards are designed to teach English in a meaningful way by using Biblical stories that connect grammar, vocabulary, and textual comprehension. Each story is carefully crafted to cover specific grammar and vocabulary topics, making learning engaging and significant.
+            StoryCards are designed to teach English in a meaningful way by using biblical stories that connect grammar, vocabulary, and textual comprehension. Each story is carefully crafted to cover specific grammar and vocabulary topics, making learning engaging and significant.
         </p>
     </div>
 </div>
@@ -238,10 +240,10 @@
 <div id="quizzes-popup" class="popup">
     <div class="popup-content">
         <span class="close">&times;</span>
-        <h2>Quizzes: Perguntas & Respostas Interativas</h2>
+        <h2>Quizzes: Interactive Question Games</h2>
         <p>
-            O que é: Um jogo de perguntas voltado para o conteúdo bíblico, linguístico e gramatical de cada lição, com feedback imediato sobre acertos e erros.
-            Por que é incrível: Promove uma competição saudável que motiva o aluno a revisar tudo o que aprendeu, tornando o processo de aprendizado mais dinâmico e engajador.
+            What it is: A question game focused on biblical, linguistic, and grammatical content from each lesson, with immediate feedback on correct and incorrect answers.
+            Why it's great: It fosters healthy competition that motivates students to review what they've learned, making the learning process more dynamic and engaging.
         </p>
     </div>
 </div>
@@ -250,9 +252,9 @@
 <div id="speak-popup" class="popup">
     <div class="popup-content">
         <span class="close">&times;</span>
-        <h2>Speak Cards: Pratique a Pronúncia de Forma Interativa</h2>
+        <h2>Speak Cards: Practice Pronunciation Interactively</h2>
         <p>
-            Speak Cards são cartões que mostram imagens e palavras que podem ser ouvidas pelo aluno. Em seguida, o aluno pronuncia a palavra do cartão, e o app avalia se a pronúncia está correta ou errada. Essa ferramenta ajuda a melhorar a confiança e a precisão na fala de maneira prática e divertida.
+            Speak Cards are cards that show images and words that can be heard by the student. The student then pronounces the word from the card, and the app evaluates whether the pronunciation is correct or incorrect. This tool helps improve confidence and accuracy in speaking in a practical and fun way.
         </p>
     </div>
 </div>
@@ -261,9 +263,9 @@
 <div id="hannahvideos-popup" class="popup">
     <div class="popup-content">
         <span class="close">&times;</span>
-        <h2>HannahVideos: Engaging Learning Through Videos</h2>
+        <h2>HannahVideos: Dynamic Video Learning</h2>
         <p>
-            HannahVideos are central to the course, tailored for each unit to reflect Biblical themes, grammatical content, and vocabulary. These engaging videos help reinforce learning through visual and auditory means.
+            HannahVideos are central to the course, tailored for each unit to reflect biblical themes, grammatical content, and vocabulary. These engaging videos help reinforce learning through visual and auditory means.
         </p>
     </div>
 </div>
@@ -272,25 +274,25 @@
 <div id="lessons-popup" class="popup">
     <div class="popup-content">
         <span class="close">&times;</span>
-        <h2>Exploring Biblical Lessons: Matching Game & Life Lessons</h2>
+        <h2>Exploring Biblical Lessons: Connect Bible Lessons to Life</h2>
         <p>
-            Connect Biblical lessons to real-life situations through Matching Games and Life Lessons activities, fostering reflection and practical application of learned values in both linguistic and spiritual contexts.
+            Connect biblical lessons to real-life situations through Matching Games and Life Lessons activities, fostering reflection and practical application of the values learned in both linguistic and spiritual contexts.
         </p>
     </div>
 </div>
 
-<!-- Ferramentas de Ortografia Popup -->
+<!-- Spelling Tools Popup -->
 <div id="spelling-tools-popup" class="popup">
     <div class="popup-content">
         <span class="close">&times;</span>
-        <h2>Ferramentas de Ortografia: Praticando a Escrita Correta</h2>
+        <h2>Spelling Tools: Practice Accurate Writing</h2>
         <p>
             <strong>1. Missing Words</strong><br>
-            O aluno vê uma imagem e deve escrever corretamente a palavra correspondente.<br>
-            Por que é incrível: Desenvolve a precisão ortográfica e incentiva o pensamento rápido sobre as letras que formam cada vocábulo.<br><br>
+            The student sees an image and must write the corresponding word correctly.<br>
+            Why it's great: It develops spelling accuracy and encourages quick thinking about the letters that form each word.<br><br>
             <strong>2. Mixed Letters</strong><br>
-            O aluno reorganiza letras embaralhadas para formar a palavra correta.<br>
-            Por que é incrível: Treina a memória visual, reforça a ortografia e é uma forma de exercício interativo e desafiador.
+            The student rearranges scrambled letters to form the correct word.<br>
+            Why it's great: It trains visual memory, reinforces spelling, and provides an interactive and challenging exercise.
         </p>
     </div>
 </div>
@@ -299,9 +301,9 @@
 <div id="tests-popup" class="popup">
     <div class="popup-content">
         <span class="close">&times;</span>
-        <h2>Tests: Assessing Your Progress</h2>
+        <h2>Tests: Assess Your Progress</h2>
         <p>
-            Regular tests serve as essential tools for evaluating your understanding and mastery of the material. They help track your progress and identify areas that need further improvement.
+            Regular tests are essential tools for evaluating your understanding and mastery of the material. They help track your progress and identify areas that need improvement.
         </p>
     </div>
 </div>
