--- a/Apresentacao/propaganda.html
+++ b/Apresentacao/propaganda.html
@@ -36,10 +36,10 @@
 
         /* Container Styling */
         .container {
-            background-color: rgba(255, 255, 255, 0.8);
+            background-color: rgba(255, 255, 255, 0);
             padding: 30px;
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            box-shadow: none;
             max-width: 800px;
             width: 90%;
             text-align: center;
