--- a/Apresentacao/propaganda.html
+++ b/Apresentacao/propaganda.html
@@ -189,6 +189,8 @@
         <p>
             StoryCards are designed to teach English in a meaningful way by using biblical stories that connect grammar, vocabulary, and textual comprehension. Each story is carefully crafted to cover specific grammar and vocabulary topics, making learning engaging and significant.
         </p>
+ <!-- Adicionar imagem -->
+        <img src="../../../../../imagens/exemplos/storycards-example.png" alt="StoryCards Example" style="width:100%; margin-top:15px; border-radius:10px;">
     </div>
 </div>
 
