--- a/Apresentacao/propaganda.html
+++ b/Apresentacao/propaganda.html
@@ -91,16 +91,34 @@
             align-items: center;
         }
 
-        .popup-content {
-            background-color: rgba(255, 255, 255, 0.95);
-            padding: 20px;
-            border-radius: 10px;
-            width: 80%;
-            max-width: 600px;
-            position: relative;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-            animation: fadeIn 0.3s;
-        }
+       /* Atualize o estilo de .popup-content */
+.popup-content {
+    background-color: rgba(255, 255, 255, 0.95);
+    padding: 20px;
+    border-radius: 10px;
+    width: 80%;
+    max-width: 600px;
+    max-height: 90%; /* Limita a altura a 90% da tela */
+    overflow-y: auto; /* Adiciona rolagem vertical se necessário */
+    position: relative;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    animation: fadeIn 0.3s;
+}
+
+/* Certifique-se de que .popup centraliza o conteúdo e ocupa toda a tela */
+.popup {
+    display: none; 
+    position: fixed; 
+    z-index: 1000; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: hidden; /* Evita que a barra de rolagem da página interfira */
+    background-color: rgba(0,0,0,0.5); 
+    justify-content: center;
+    align-items: center;
+}
 
         /* Close Button Styling */
         .close {
