--- a/Apresentacao/propaganda.html
+++ b/Apresentacao/propaganda.html
@@ -317,7 +317,10 @@
         <p>
             Connect biblical lessons to real-life situations through Matching Games and Life Lessons activities, fostering reflection and practical application of the values learned in both linguistic and spiritual contexts.
         </p>
-        <img src="../imagens/botoes/matching_game_button.png" alt="Lessons Example" style="width:100%; margin-top:15px; border-radius:10px;">
+        <!-- Primeira imagem -->
+        <img src="../imagens/botoes/matching_game_button.png" alt="Matching Game Example" style="width:100%; margin-top:15px; border-radius:10px;">
+        <!-- Nova imagem adicionada -->
+        <img src="../imagens/botoes/life_lessons_button.png" alt="Life Lessons Example" style="width:100%; margin-top:15px; border-radius:10px;">
     </div>
 </div>
 
@@ -326,12 +329,9 @@
     <div class="popup-content">
         <span class="close">&times;</span>
         <h2>Spelling Tools: Practice Accurate Writing</h2>
-        <p>
-            <strong>1. Missing Words</strong><br>
-            The student sees an image and must write the corresponding word correctly.<br>
-            <strong>2. Mixed Letters</strong><br>
-            The student rearranges scrambled letters to form the correct word.
-        </p>
+       <p>
+    <strong>1. Missing Words:</strong> The student sees an image and must write the corresponding word correctly. <strong>2. Mixed Letters:</strong> The student rearranges scrambled letters to form the correct word.
+</p>
         <img src="../imagens/botoes/missing_word_button.png" alt="Missing Word Example" style="width:100%; margin-top:15px; border-radius:10px;">
         <img src="../imagens/botoes/mixed_letters_students.png" alt="Mixed Letters Example" style="width:100%; margin-top:15px; border-radius:10px;">
     </div>
