--- a/Apresentacao/propaganda.html
+++ b/Apresentacao/propaganda.html
@@ -329,8 +329,8 @@
     <div class="popup-content">
         <span class="close">&times;</span>
         <h2>Spelling Tools: Practice Accurate Writing</h2>
-       <p>
-    <strong>1. Missing Words:</strong> The student sees an image and must write the corresponding word correctly. <strong>2. Mixed Letters:</strong> The student rearranges scrambled letters to form the correct word.
+      <p>
+    <strong>Missing Words</strong> and <strong>Mixed Letters</strong> are complementary activities that improve spelling and vocabulary. <strong>Missing Words</strong> focuses on word recognition and spelling through image association, while <strong>Mixed Letters</strong> strengthens memory and word structure in an interactive way.
 </p>
         <img src="../imagens/botoes/missing_word_button.png" alt="Missing Word Example" style="width:100%; margin-top:15px; border-radius:10px;">
         <img src="../imagens/botoes/mixed_letters_students.png" alt="Mixed Letters Example" style="width:100%; margin-top:15px; border-radius:10px;">
