--- a/LandPage/index.html
+++ b/LandPage/index.html
@@ -57,10 +57,10 @@
     }
    
 .hero {
-  background-image: url('./fundo_conteiner.png'); /* Caminho para a imagem */
-  background-repeat: no-repeat; /* Evita repetição da imagem */
-  background-size: cover; /* Faz a imagem preencher o contêiner */
-  background-position: center; /* Centraliza a imagem */
+   background-image: url('./fundo_conteiner.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
   background-color: #f3f3f3; /* Fallback */
 }
     .hero img {
