--- a/LandPage/index - Copy.html
+++ b/LandPage/index - Copy.html
@@ -18,7 +18,7 @@
       line-height: 1.6;
       color: #333;
       /* Imagem de fundo repetindo */
-      background-image: url('./fundo.png');
+      background-image: url('../../../../imagens/fundo.png');
       background-repeat: repeat;
       background-color: #f3f3f3;
     }
@@ -55,25 +55,23 @@
       color: #2F4F2F; /* tom de verde escuro */
       margin-bottom: 0.5rem;
     }
-
-    /* HERO / BANNER */
-    .hero {
-      background-color: rgba(76,175,80,0.2); /* leve fundo verde translucido */
-      border-radius: 8px;
-      text-align: center;
-      padding: 2rem 1rem;
-      margin-bottom: 1rem;
-    }
+   
+.hero {
+   background-image: url('./fundo_conteiner.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  background-color: #f3f3f3; /* Fallback */
+}
     .hero img {
       max-width: 200px;
       display: block;
       margin: 0.5rem auto;
     }
-    .hero h2 {
-      font-size: 1.6rem;
-      color: #2F4F2F;
-      margin-bottom: 1rem;
-    }
+    .hero h2, .hero p {
+     color: #fff; /* Texto branco */
+     text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6); /* Sombra leve */
+   }
     .hero p {
       font-size: 1rem;
       max-width: 700px;
@@ -195,15 +193,14 @@
     </header>
 
     <!-- HERO / BANNER PRINCIPAL -->
-    <section class="hero">
-      <!-- Ajuste o nome do arquivo GIF da Hannah se quiser -->
-      <img src="./gif-hannah.gif" alt="Hannah em GIF">
-      <h2>Apresentando o Hannah English Course</h2>
-      <p>Aprenda Inglês e Fortaleça a Fé com a Ajuda de Hannah e do Robô Samuel.</p>
-      <a class="cta-btn" href="https://hannahenglishcourse.vercel.app/" target="_blank">
-        Conheça o Curso
-      </a>
-    </section>
+<section class="hero">
+  <img src="./gif-hannah.gif" alt="Hannah em GIF">
+  <h2>Apresentando o Hannah English Course</h2>
+  <p>Aprenda Inglês e Fortaleça a Fé com a Ajuda de Hannah e do Robô Samuel.</p>
+  <a class="cta-btn" href="https://hannahenglishcourse.vercel.app/" target="_blank">
+    Conheça o Curso
+  </a>
+</section>
 
     <!-- SEÇÃO: TEXTO EMOCIONAL SOBRE O CURSO -->
     <section>
