--- a/LandPage/index.html
+++ b/LandPage/index.html
@@ -18,7 +18,7 @@
       line-height: 1.6;
       color: #333;
       /* Imagem de fundo repetindo */
-      background-image: url('./fundo.png');
+      background-image: url('../imagens/fundo.png');
       background-repeat: repeat;
       background-color: #f3f3f3;
     }
