--- a/LandPage/index.html
+++ b/LandPage/index.html
@@ -58,7 +58,7 @@
 
     /* HERO / BANNER */
     .hero {
-      background-color: rgba(76,175,80,0.2); /* leve fundo verde translucido */
+      background-color: #FFFFFF
       border-radius: 8px;
       text-align: center;
       padding: 2rem 1rem;
