--- a/LandPage/index.html
+++ b/LandPage/index.html
@@ -38,6 +38,8 @@
       align-items: center;
       text-align: center;
       margin-bottom: 1rem;
+      background-color: #fff; /* Cor sólida, pode ajustar conforme necessário */
+      z-index: 1; /* Certifique-se de que o cabeçalho fique por cima */
     }
 
     .logo-area {
@@ -146,7 +148,8 @@
       text-align: center;
       margin-top: 2rem;
       padding: 1rem;
-      background-color: rgba(76,175,80,0.1);
+      background-color: #fff; /* Mesmo conceito para o rodapé */
+      z-index: 1;
       border-radius: 8px;
     }
     footer p {
