--- a/LandPage/index.html
+++ b/LandPage/index.html
@@ -227,7 +227,9 @@
 
     <!-- IMAGEM ENTRE OS CONTÊINERES -->
     <section class="image-section">
-      <img src="./atividades_image.png" alt="Imagem das Atividades" />
+       <a href="https://hannahenglishcourse.vercel.app/" target="_blank">
+    <img src="./atividades_image.png" alt="Imagem das Atividades" />
+       </a>
     </section>
 
     <!-- SEÇÃO: POR QUE É INCOMPARÁVEL -->
