--- a/LandPage/index.html
+++ b/LandPage/index.html
@@ -38,18 +38,26 @@
       align-items: center;
       text-align: center;
       margin-bottom: 1rem;
-      background-color: rgba(255, 255, 255, 0.8); /* Branco com 90% de opacidade */
-      z-index: 1; /* Certifique-se de que o cabeçalho fique por cima */
+      background-color: rgba(255, 255, 255, 0.8); /* Branco com 80% de opacidade */
+      z-index: 1; 
+      border-radius: 8px;
+      padding: 1rem 0;
     }
 
     .logo-area {
       display: flex;
-      gap: 2rem;
+      flex-direction: row; /* Mantém as logos lado a lado */
+      align-items: center;
+      justify-content: center;
+      gap: 2rem; 
       margin-bottom: 1rem;
+      flex-wrap: wrap; /* Permite quebrar linha em telas muito estreitas, evitando deformação */
     }
+
     .logo-area img {
-      width: 80px;
-      height: auto;
+      height: 70px;  /* Ajuste a altura conforme necessário */
+      width: auto;   /* Para não distorcer a imagem */
+      max-width: 200px; /* Evita que a imagem fique grande demais em telas grandes */
     }
 
     header h1 {
@@ -60,7 +68,7 @@
 
     /* HERO / BANNER */
     .hero {
-      background-color: rgba(255, 255, 255, 0.8); /* Branco com 90% de opacidade */
+      background-color: rgba(255, 255, 255, 0.8); /* Branco com 80% de opacidade */
       border-radius: 8px;
       text-align: center;
       padding: 2rem 1rem;
@@ -98,7 +106,7 @@
 
     /* SEÇÕES */
     section {
-      background-color: rgba(255, 255, 255, 0.8); /* Branco com 90% de opacidade */
+      background-color: rgba(255, 255, 255, 0.8); /* Branco com 80% de opacidade */
       margin-bottom: 1rem;
       border-radius: 8px;
       padding: 1.5rem;
@@ -115,16 +123,18 @@
       font-weight: bold;
       color: #2F4F2F;
     }
-.image-section {
-  text-align: center; /* Centraliza a imagem */
-  margin: 2rem 0; /* Espaço acima e abaixo */
-}
-.image-section img {
-  max-width: 100%; /* A imagem se ajusta ao tamanho do contêiner */
-  height: auto; /* Mantém a proporção da imagem */
-  border-radius: 8px; /* Adiciona cantos arredondados (opcional) */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra leve (opcional) */
-}
+
+    /* SEÇÃO COM IMAGEM CENTRALIZADA */
+    .image-section {
+      text-align: center;
+      margin: 2rem 0;
+    }
+    .image-section img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
 
     /* LISTAS */
     ul {
@@ -143,13 +153,30 @@
       gap: 1rem;
       margin-top: 1rem;
     }
+
     .testemunho {
       background-color: #f9f9f9;
       border-left: 4px solid #4CAF50;
       padding: 0.8rem;
       border-radius: 4px;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      gap: 1rem;
     }
-    .testemunho strong {
+
+    /* Permite inserir imagem no depoimento se desejar */
+    .testemunho img {
+      width: 60px;   /* Ajuste conforme necessário */
+      height: 60px;
+      object-fit: cover; /* Mantém a proporção da imagem */
+      border-radius: 50%; 
+    }
+
+    .testemunho-texto {
+      flex: 1;
+    }
+    .testemunho-texto strong {
       color: #2F4F2F;
     }
 
@@ -158,7 +185,7 @@
       text-align: center;
       margin-top: 2rem;
       padding: 1rem;
-      background-color:rgba(255, 255, 255, 0.8); /* Branco com 90% de opacidade */
+      background-color: rgba(255, 255, 255, 0.8);
       z-index: 1;
       border-radius: 8px;
     }
@@ -167,13 +194,17 @@
     }
     .footer-logos {
       display: flex;
+      flex-direction: row; /* Mantém lado a lado no rodapé */
       justify-content: center;
+      align-items: center;
       gap: 2rem;
       margin: 1rem 0;
+      flex-wrap: wrap; /* Para ajustar em telas muito pequenas */
     }
     .footer-logos img {
-      width: 60px;
-      height: auto;
+      height: 60px; 
+      width: auto;
+      max-width: 200px; 
     }
     .footer-copy {
       color: #555;
@@ -182,8 +213,8 @@
 
     /* RESPONSIVIDADE */
     @media (max-width: 768px) {
-      .logo-area {
-        flex-direction: column;
+      header h1 {
+        font-size: 1.4rem;
       }
       .hero h2 {
         font-size: 1.4rem;
@@ -200,16 +231,19 @@
     <!-- HEADER -->
     <header>
       <div class="logo-area">
-        <!-- Ajuste os nomes dos arquivos de logo conforme necessário -->
-        <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation Thailand">
-        <img src="./logo-nacaodacruz.png" alt="Logo Missão Nação da Cruz">
+        <!-- Links para as logos solicitadas -->
+        <a href="https://www.instagram.com/hannah_mission?igsh=ZHloNnpuYmEwaGdj&utm_source=qr" target="_blank">
+          <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation Thailand">
+        </a>
+        <a href="https://nacaodacruz.com.br/" target="_blank">
+          <img src="./logo-nacaodacruz.png" alt="Logo Missão Nação da Cruz">
+        </a>
       </div>
       <h1>Aprendendo Inglês com a Bíblia e Investindo em Missões</h1>
     </header>
 
     <!-- HERO / BANNER PRINCIPAL -->
     <section class="hero">
-      <!-- Ajuste o nome do arquivo GIF da Hannah se quiser -->
       <img src="./gif-hannah.gif" alt="Hannah em GIF">
       <h2>Apresentando o Hannah English Course</h2>
       <p>Aprenda Inglês e Fortaleça a Fé com a Ajuda de Hannah e do Robô Samuel.</p>
@@ -227,9 +261,9 @@
 
     <!-- IMAGEM ENTRE OS CONTÊINERES -->
     <section class="image-section">
-       <a href="https://hannahenglishcourse.vercel.app/" target="_blank">
-    <img src="./atividades_image.png" alt="Imagem das Atividades" />
-       </a>
+      <a href="https://hannahenglishcourse.vercel.app/" target="_blank">
+        <img src="./atividades_image.png" alt="Imagem das Atividades" />
+      </a>
     </section>
 
     <!-- SEÇÃO: POR QUE É INCOMPARÁVEL -->
@@ -267,13 +301,34 @@
     <section>
       <h3>O que Estão Dizendo</h3>
       <div class="testemunho-container">
+        <!-- Depoimento 1 -->
         <div class="testemunho">
-          <strong>Professor A. (Tailândia):</strong>
-          <p>“O Hannah English Course tem trazido alegria e profundidade às aulas. As crianças aprendem inglês e valores cristãos ao mesmo tempo, de forma leve e cativante.”</p>
+          <!-- Caso queira inserir foto da pessoa -->
+          <!-- <img src="./professorA.jpg" alt="Foto do Professor A"> -->
+          <div class="testemunho-texto">
+            <strong>Professor A. (Tailândia):</strong>
+            <p>“O Hannah English Course tem trazido alegria e profundidade às aulas. As crianças aprendem inglês e valores cristãos ao mesmo tempo, de forma leve e cativante.”</p>
+          </div>
         </div>
+
+        <!-- Depoimento 2 -->
         <div class="testemunho">
-          <strong>Aluna B. (Myanmar):</strong>
-          <p>“Nunca imaginei que aprender inglês poderia ser tão divertido. A cada história bíblica, sinto que cresço no idioma e na minha fé.”</p>
+          <!-- Caso queira inserir foto da pessoa -->
+          <!-- <img src="./alunaB.jpg" alt="Foto da Aluna B"> -->
+          <div class="testemunho-texto">
+            <strong>Aluna B. (Myanmar):</strong>
+            <p>“Nunca imaginei que aprender inglês poderia ser tão divertido. A cada história bíblica, sinto que cresço no idioma e na minha fé.”</p>
+          </div>
+        </div>
+
+        <!-- Novo Depoimento 3 -->
+        <div class="testemunho">
+          <!-- Você pode inserir a imagem do pastor, se desejar -->
+          <!-- <img src="./pastor.jpg" alt="Foto do Pastor da Igreja Plantada"> -->
+          <div class="testemunho-texto">
+            <strong>Pastor da Igreja Plantada (Tailândia):</strong>
+            <p>“Ver o inglês sendo ensinado junto à Palavra de Deus tem abençoado nossa comunidade local. O Hannah English Course foi um divisor de águas para o crescimento espiritual e educacional de nossos membros.”</p>
+          </div>
         </div>
       </div>
     </section>
@@ -294,8 +349,12 @@
     <footer>
       <p><em>“E disse-lhes: Ide por todo o mundo, pregai o evangelho a toda criatura.” (Marcos 16:15)</em></p>
       <div class="footer-logos">
-        <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation Thailand">
-        <img src="./logo-nacaodacruz.png" alt="Logo Missão Nação da Cruz">
+        <a href="https://www.instagram.com/hannah_mission?igsh=ZHloNnpuYmEwaGdj&utm_source=qr" target="_blank">
+          <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation Thailand">
+        </a>
+        <a href="https://nacaodacruz.com.br/" target="_blank">
+          <img src="./logo-nacaodacruz.png" alt="Logo Missão Nação da Cruz">
+        </a>
       </div>
       <div class="footer-copy">
         <p>© 2025 Hannah English Course. Todos os direitos reservados.</p>
