--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
         // Fala a mensagem e faz o controle do GIF
         function speakSamuelMessage() {
-            const text = "Hi, I'm Samuel. Click that bouncy button and discover the best way to learn English!";
+            const text = "Hi, I'm Samuel! Click that bouncy button to discover the best way to learn English, or log in to start studying!";
             const utterance = new SpeechSynthesisUtterance(text);
 
             // Se temos alguma voz em inglês, define:
